--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body {
   
   /* Dark mode styles */
   .dark-mode {
-    background-color: #1a1a1a; /* Dark background color */
+    background-color: #3f0158; /* Dark background color */
     color: #ffffff; /* Dark text color */
   }
   
