--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,18 @@
 /* Default styles */
 body {
     background-color: #ffffff; /* Light background color */
-    color: #000000; /* Light text color */
+    color: #000000;
+     /* Light text color */
   }
   
   /* Dark mode styles */
   .dark-mode {
     background-color: #3f0158; /* Dark background color */
-    color: #ffffff; /* Dark text color */
+    color: #ffffff; 
+    /* Dark text color */
   }
   
   /* Styles for the toggle container */
   .toggle-container {
     margin-top: 20px; /* Adjust the margin as needed */
   }
-  
