--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ body {
   
   /* Dark mode styles */
   .dark-mode {
-    background-color: #3f0158; /* Dark background color */
+    background-color: #000000; /* Dark background color */
     color: #ffffff; 
     /* Dark text color */
   }
